fixed layouts shifts

--- a/src/features/ProductList/components/Product/Product.module.css
+++ b/src/features/ProductList/components/Product/Product.module.css
@@ -12,6 +12,7 @@
 
 .product__thumbnail {
   min-width: 100%;
+  height: auto;
   border-radius: 0.5rem;
   transition: box-shadow 0.25s ease;
 }
